# DennyHome_bot

./: .env.example  .gitignore  README.md  license  pyproject.toml
bot/: __main__.py  config.py  main.py
bot/handlers/: add_device.py  login.py  register.py  start.py  status.py  wake.py
