[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dennyhome-bot"
version = "0.1.0"
description = "Bot Telegram per la gestione dei dispositivi in ambiente privato"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPLv3" }

authors = [
  { name = "D3ENNY" }
]

dependencies = [
  "pyrogram>=2.0",
  "tgcrypto",
  "uvloop; platform_system != 'Windows'",
]

[project.urls]
Repository = "https://github.com/d3enny/dennyHome_Bot"
